Fix horizontal scroll

--- a/src/styles/TableColumn.css
+++ b/src/styles/TableColumn.css
@@ -29,7 +29,7 @@
 }
 
 .table-container {
-  overflow-y: scroll;
+  overflow-x: scroll;
   width: 100%;
 }
 
